--- a/Code_X_Mania/template/req.html
+++ b/Code_X_Mania/template/req.html
@@ -1,4 +1,4 @@
-<!--(c) ChVivekTomar-->
+<!--(c) GreyMatters Bot-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -48,7 +48,7 @@
 
     <footer>
 	    <center><h4>Video not Playing ? A Strong possibility is because Your Browser or The Player Doesn't Support CODEC Please You are Requested to Download and Watch :D</h4></center><p>
-	    <center><h2> <b>©</b> Vivek Tomar </h2></center>
+	    <center><h2> <b>©</b> GreyMatters Bot </h2></center>
 	    
     </footer>
     <script src="https://cdn.plyr.io/3.6.9/plyr.js"></script>
