--- a/Code_X_Mania/template/dl.html
+++ b/Code_X_Mania/template/dl.html
@@ -1,4 +1,4 @@
-<!-- (c) GreyMatter's Bot-->
+<!-- (c) GreyMatters Bot-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,7 +39,7 @@
 
    <footer>
 	   <center><h4>Video not playing ? A Strong possibility is because Your Browser or The Player Doesn't Support CODEC Please You are Requested to Download and Watch :D</h4></center><p>
-	   <center><h2><b>© Vivek Tomar </b></H2></center>
+	   <center><h2><b>© GreyMatters Bot </b></H2></center>
 	   
     </footer>
     <script src="https://cdn.plyr.io/3.6.9/plyr.js"></script>
