--- a/Code_X_Mania/template/req.html
+++ b/Code_X_Mania/template/req.html
@@ -47,6 +47,31 @@
     </div>
 
     <footer>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+a:link, a:visited {
+  background-color: #036ffc;
+  color: white;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+a:hover, a:active {
+  background-color: #036ffc;
+}
+</style>
+</head>
+<body>
+
+<a href="intent:%s#Intent;package=com.mxtech.videoplayer.ad;S.title=YkFbXGOfHC236vTwmKwta;end" target="_blank">▶️ Play with mx player</a>
+
+</body>
+</html>
+
 	    <center><h4>Video not Playing ? A Strong possibility is because Your Browser or The Player Doesn't Support CODEC Please You are Requested to Download and Watch :D</h4></center><p>
 	    <center><h2> <b>©</b> GreyMatters Bot </h2></center>
 	    
