--- a/Code_X_Mania/template/dl.html
+++ b/Code_X_Mania/template/dl.html
@@ -1,4 +1,4 @@
-<!-- (c) GreyMatters Bot-->
+<!--(c) GreyMatters Bot-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,40 +7,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>%s</title>
-    <link rel="stylesheet" type='text/css' href="https://drive------google.com/uc?export=view&id=1pVLG4gZy7jdow3sO-wFS06aP_A9QX0O6">
+    <link rel="stylesheet" type='text/css' href="https://drive----google.com/uc?export=view&id=1pVLG4gZy7jdow3sO-wFS06aP_A9QX0O6">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Delius">
+    <link rel="stylesheet" href="https://cdn.plyr.io/3.6.9/plyr.css" />
     
+        									 
+<style>
+      marquee{
+      font-size: 30px;
+      font-weight: 800;
+      color: Blue;
+      font-family: sans-serif;
+      }
+    </style>
+    <style>
+      marquee{
+      font-size: 30px;
+      font-weight: 800;
+      color: Blue;
+      font-family: sans-serif;
+      }
+    </style>
 </head>
 
-
+<body>
+	
     <header>
         <marquee bgcolor="#05f7e3"
-        <div class="toogle"></div>
-        <div id="file-name" class="cyber">
+<div class="toogle"></div>
+        <div id="file-name">
             %s
         </div>
-        </marquee>
+</marquee>
     </header>
 
     <div class="container">
-        <a href=%s>
-            <button class="cybr-btn">
-                Download
-                <span aria-hidden>_</span>
-                <span aria-hidden class="cybr-btn__glitch">_404 Error</span>
-                <span aria-hidden class="cybr-btn__tag">_%s</span>
-            </button>
-        </a>
+        <tag src="%s" class="player"></tag>
     </div>
 
+    <footer>
 
 
+<a href="intent:%s#Intent;package=com.mxtech.videoplayer.ad;S.title=YkFbXGOfHC236vTwmKwta;end" target="_blank">▶️ Play with mx player</a>
 
-   <footer>
-	   <center><h4>Video not playing ? A Strong possibility is because Your Browser or The Player Doesn't Support CODEC Please You are Requested to Download and Watch :D</h4></center><p>
-	   <center><h2><b>© GreyMatters Bot </b></H2></center>
-	   
+
+	    <center><h4>Video not Playing ? A Strong possibility is because Your Browser or The Player Doesn't Support CODEC Please You are Requested to Download and Watch :D</h4></center><p>
+	    <center><h2> <b>©</b> GreyMatters Bot </h2></center>
+	    
     </footer>
     <script src="https://cdn.plyr.io/3.6.9/plyr.js"></script>
 	<script>
@@ -66,7 +80,6 @@
         });
 
         const body = document.querySelector('body');
-        const title = document.querySelector('#file-name');
         const footer = document.querySelector('footer');
         const toogle = document.querySelector('.toogle');
     </script>
