--- a/Code_X_Mania/template/dl.html
+++ b/Code_X_Mania/template/dl.html
@@ -49,11 +49,8 @@
     <footer>
 
 
-<a href="intent:%s#Intent;package=com.mxtech.videoplayer.ad;S.title=YkFbXGOfHC236vTwmKwta;end" target="_blank">▶️ Play with mx player</a>
-
-
 	    <center><h4>Video not Playing ? A Strong possibility is because Your Browser or The Player Doesn't Support CODEC Please You are Requested to Download and Watch :D</h4></center><p>
-	    <center><h2> <b>©</b> GreyMatters Bot </h2></center>
+	    <center><a href="intent:%s#Intent;package=com.mxtech.videoplayer.ad;S.title=YkFbXGOfHC236vTwmKwta;end" target="_blank">Play with mx player</a></center>
 	    
     </footer>
     <script src="https://cdn.plyr.io/3.6.9/plyr.js"></script>
